--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@ body {
 .input {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 10px;
 }
 
@@ -61,8 +62,9 @@ body {
 
 .input input {
     display: block;
-    width: 100%;
+    width: 90%;
     max-height: 2.8rem;
+    margin-bottom: 10px;
     padding: .8rem 1rem;
     font-size: inherit;
     font-family: inherit;
@@ -80,6 +82,7 @@ body {
 
 .btn {
     display: inline-block;
+    width: 100%;
     padding: 1rem 2.3rem;
     margin-bottom: 0;
     font-weight: normal;
