--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Node JS APP</title>
+    <!-- в index.js прописан путь к статике public поэтому за корень для css считаем его -->
     <link rel="stylesheet" href="./css/style.css">
-   <!-- в index.js прописан путь к статике public поэтому за корень для css считаем его -->
 </head>
 <body>
     <div class="app">
@@ -14,11 +14,11 @@
             <h1>Title</h1>
             <p class="error">Some error</p>
         </div>
-        <form action="" class="app__content">
+        <form action="/" method="POST" class="app__content">
             <div class="input">
                 <label for="city">Your city</label>
                 <input type="text" name="city" id="city" placeholder="Name City">
-                <input type="submit" class="btn" value="Get weather">
+                <button type="submit" class="btn">Get weather</button>
             </div>
         </form>
     </div>
