--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,11 @@
 <body>
     <div class="app">
         <div class="app__header">
-            <h1>Title</h1>
-            <p class="error">Some error</p>
+            <% if (weather) { %> 
+                <h1><%= weather %> </h1>
+            <% } else if (error) { %> 
+                <p class="error"><%= error %></p>
+            <% } %> 
         </div>
         <form action="/" method="POST" class="app__content">
             <div class="input">
